# osh

./: LICENSE.md  README.md  dune-project  index.html  osh.opam  shell.nix
.github/workflows/: gh-pages.yml  osh.yml
Osh__Helpers/: index.html
Osh__Helpers/System/: index.html
Osh__Proc/: index.html
Ppx_osh/: index.html
doc/: dune  index.mld
lib/: dune  helpers.ml  proc.ml  proc.mli
osh/: index.html
osh/Osh/: index.html
osh/Osh/Helpers/: index.html
osh/Osh/Helpers/Streams/: index.html
osh/Osh/Helpers/System/: index.html
osh/Osh/Proc/: index.html
osh/Osh__Helpers/Streams/: index.html
osh/Ppx_osh/E/: index.html
ppx/: dune  ppx_osh.ml
src/: dune  helpers.ml  helpers.mli  ppx_helpers.ml  proc.ml
test/: dune  test.ml
test/osh/: dune  test.ml  test.ml.expected
test/osh_def/: dune  test.ml  test.ml.expected
test/osh_script/: dune  test.ml  test.ml.expected
test/pp/: dune  pp.ml
