opam-version: "1.2"
maintainer: "m@cdagostino.io"
authors: ["Carlos D."]
homepage: "https://github.com/carlosdagos/osh"
bug-reports: "https://github.com/carlosdagos/osh/issues"
dev-repo: "https://github.com/carlosdagos/osh.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

build-test: ["dune" "runtest" "-p" name]

depends: [
  "dune" {build}
  "ocaml" {>= "4.08.0"}
  "core" {>= "v0.13.0"}
  "logs" {>= "0.7.0"}
  "ppxlib" {>= "0.10.0"}
]
